--- a/.github/workflows/deploy_pre.yml
+++ b/.github/workflows/deploy_pre.yml
@@ -26,6 +26,49 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           path: inventory
           ref: 'main'
+      - name: get runner ip address
+        id: ip
+        uses: haythem/public-ip@v1.3
+      - name: Donwload artifact
+        run: |
+          VERSION=`grep -m 1 "</version>" pom.xml | sed 's/.*<version>//' | sed 's/<\/version>//'`
+          ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
+          
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "ARTIFACTID=$ARTIFACTID" >> $GITHUB_OUTPUT
+          
+          aws codeartifact get-package-version-asset --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} \
+          --format maven --namespace com.google.guava --package ${ARTIFACTID} --package-version ${VERSION} \
+          --asset ${ARTIFACT} \
+          target/${ARTIFACT}
+      - name: Print Public IP
+        run: |
+          echo ${{ steps.ip.outputs.ipv4 }}
+      #- name: whitelist runner ip address
+      #  run: |
+      #    aws ec2 authorize-security-group-ingress \
+      #      --group-id ${{ secrets.AWS_SG }} \
+      #      --protocol tcp \
+      #      --port 22 \
+      #      --cidr ${{ steps.ip.outputs.ipv4 }}/32
       - name: Deploy PRE
+        id: dpre
         run: |
           echo -e "ESTOY EN DEPLOY PRE\n"
+          ls -lR
+          echo "------------------------------------------"
+          echo ${{ steps.pcode.outputs.VERSION }}
+          echo ${{ steps.pcode.outputs.ARTIFACTID }}
+          echo -e "------------------------------------------\n\n\n"
+
+      #    ansible-playbook --user ubuntu -i inventory/PRE/host ansible/deploy_filetransfer.yml -e "artifactId=${{ steps.pcode.outputs.ARTIFACTID }}" -e "version=${{ steps.pcode.outputs.VERSION }}" -e "target=PRE" -e "workspace=target"
+      #- name: revoke runner ip address
+      #  if: success() || steps.dpre.conclusion == 'failure'
+      #  run: |
+      #    aws ec2 revoke-security-group-ingress \
+      #      --group-id ${{ secrets.AWS_SG }} \
+      #      --protocol tcp \
+      #      --port 22 \
+      #      --cidr ${{ steps.ip.outputs.ipv4 }}/32
