--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -19,13 +19,22 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Update snapshoot
+      - name: Update artifact version
         run: |
           git checkout -b develop origin/develop
           
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
+          ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          ARTIFACT="${ARTIFACTID}-${VERSION}.zip"
           NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1+1, $2, $3}'`
           timestamp=`date +"%s"`
+          
+          
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "ARTIFACTID=$ARTIFACTID" >> $GITHUB_OUTPUT
+          echo "GROUPID=$GROUPID" >> $GITHUB_OUTPUT
+          echo "ARTIFACT=$ARTIFACT" >> $GITHUB_OUTPUT
 
           git config --global user.email "corcobadopedro@gmail.com"
           git config --global user.name "corcobadopedro"
@@ -57,31 +66,27 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Publishing code
         run: |
-          VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
-          ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
-          GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
-          ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
-          NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1, $2, $3+1}'`
+          
+          ls -ltR
           
           echo "------------------------------------------"
-          echo ${VERSION}
-          echo ${ARTIFACTID}
-          echo ${GROUPID}
-          echo ${ARTIFACT}
-          echo ${NEW_VERSION}
+          echo ${{ steps.pcode.outputs.VERSION }}
+          echo ${{ steps.pcode.outputs.ARTIFACTID }}
+          echo ${{ steps.pcode.outputs.GROUPID }}
+          echo ${{ steps.pcode.outputs.ARTIFACT }}
           echo -e "------------------------------------------\n\n\n"
           
-          #AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
-          #AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --output text` 
+          AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
+          AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --output text` 
           
           echo "------------------------------------------"
-          #echo -e "\n\n${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT}\n\n"
-          #echo -e "pcm:${AWS_TOKEN}\n\n"
-          #echo -e "target/${ARTIFACT}\n\n"
+          echo -e "\n\n${AWS_REPOSITORY_URL}${{ steps.pcode.outputs.GROUPID }}/${{ steps.pcode.outputs.ARTIFACTID }}/${{ steps.pcode.outputs.VERSION }}/${{ steps.pcode.outputs.ARTIFACT }}\n\n"
+          echo -e "pcm:${AWS_TOKEN}\n\n"
+          echo -e "target/${{ steps.pcode.outputs.ARTIFACT }}\n\n"
           echo "------------------------------------------"
           
           
-          #curl --request PUT ${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
-          #--user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
-          #--data-binary "@target/${ARTIFACT}"
+          curl --request PUT ${AWS_REPOSITORY_URL}${{ steps.pcode.outputs.GROUPID }}/${{ steps.pcode.outputs.ARTIFACTID }}/${{ steps.pcode.outputs.VERSION }}/${{ steps.pcode.outputs.ARTIFACT }} \
+          --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
+          --data-binary "@target/${{ steps.pcode.outputs.ARTIFACT }}"
 
