--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -37,28 +37,28 @@ jobs:
           echo "GROUPID=$GROUPID" >> $GITHUB_OUTPUT
           echo "ARTIFACT=$ARTIFACT" >> $GITHUB_OUTPUT
 
-          git config --global user.email "corcobadopedro@gmail.com"
-          git config --global user.name "corcobadopedro"
-          git ls-remote --tags origin v${VERSION}
-          git ls-remote --heads origin release-*
+      #    git config --global user.email "corcobadopedro@gmail.com"
+      #    git config --global user.name "corcobadopedro"
+      #    git ls-remote --tags origin v${VERSION}
+      #    git ls-remote --heads origin release-*
           
           
-          git checkout -b release-${VERSION}-${timestamp} develop
-          mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
-          git commit --allow-empty -am "chore: updating branch release-${VERSION}-${timestamp} with non-snapshot versions"
-          git checkout develop
-          mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
-          git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
-          git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
-          git remote set-branches origin "*"
-          git fetch
-          git checkout main
-          git merge release-${VERSION}-${timestamp} --no-ff
-          git branch -D release-${VERSION}-${timestamp}
-          mvn -B clean verify
-          git push origin main
-          git checkout develop
-          git push origin develop
+      #    git checkout -b release-${VERSION}-${timestamp} develop
+      #    mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
+      #    git commit --allow-empty -am "chore: updating branch release-${VERSION}-${timestamp} with non-snapshot versions"
+      #    git checkout develop
+      #    mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
+      #    git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
+      #    git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
+      #    git remote set-branches origin "*"
+      #    git fetch
+      #    git checkout main
+      #    git merge release-${VERSION}-${timestamp} --no-ff
+      #    git branch -D release-${VERSION}-${timestamp}
+      #    mvn -B clean verify
+      #    git push origin main
+      #    git checkout develop
+      #    git push origin develop
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -87,7 +87,6 @@ jobs:
           echo "------------------------------------------"
           
           
-          curl --request PUT ${AWS_REPOSITORY_URL}${{ steps.uvers.outputs.GROUPID }}/${{ steps.uvers.outputs.ARTIFACTID }}/${{ steps.uvers.outputs.VERSION }}/${{ steps.uvers.outputs.ARTIFACT }} \
-          --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
-          --data-binary "@target/${{ steps.uvers.outputs.ARTIFACT }}"
-
+      #    curl --request PUT ${AWS_REPOSITORY_URL}${{ steps.uvers.outputs.GROUPID }}/${{ steps.uvers.outputs.ARTIFACTID }}/${{ steps.uvers.outputs.VERSION }}/${{ steps.uvers.outputs.ARTIFACT }} \
+      #    --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
+      #    --data-binary "@target/${{ steps.uvers.outputs.ARTIFACT }}"
